# paperwork

./: .gitignore  Cargo.toml  config.toml
src/: config.rs  main.rs
