[package]
name = "paperwork"
version = "0.1.0"
edition = "2024"

[dependencies]
acroform = "0.1.3"
chrono = "0.4.44"
clap = {version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
indexmap = {version = "2.13.0", features = ["serde"]}
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = {version = "1.0.4", features = ["preserve_order"]}